--- a/data/feats/ancestry-01-HZJqMESaEHTfefz3.htm
+++ b/data/feats/ancestry-01-HZJqMESaEHTfefz3.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The fire of your elemental ancestor manifests like dying embers of a blaze, and your inner charcoal helps staunch bleeding, purify simple poisons, and absorb acid.
-Avantage: Le feu de votre ancêtre élémentaire se manifeste comme les braises mourantes d'un brasier, et votre charbon intérieur aide à stopper les saignements, à purifier les poisons simples et à absorber l'acide.
+Avantage: Vous récupérez plus facilement lorsque vous subissez des dégâts persistants d'acide, de saignement ou de poison.
 
 ------ Description (en) ------
 <p>The fire of your elemental ancestor manifests like dying embers of a blaze, and your inner charcoal helps staunch bleeding, purify simple poisons, and absorb acid. The DC for you to recover from persistent acid, bleed, and poison damage is 10 instead of 15 (or 5 if you have particularly effective assistance).</p>
