--- a/data/feats/ancestry-01-Iqv8qj7ym63YjexN.htm
+++ b/data/feats/ancestry-01-Iqv8qj7ym63YjexN.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a habit of always being in the way when other creatures attempt to move.
-Avantage: Vous avez l'habitude d'être toujours dans le chemin lorsque d'autres créatures tentent de se déplacer.
+Avantage: Vous avez pris l'habitude de vous placer dans le chemin pour gêner les autres.
 
 ------ Description (en) ------
 <p>You have a habit of always being in the way when other creatures attempt to move. Attempt an Acrobatics check against an adjacent creature’s Reflex DC.</p>
@@ -16,5 +16,5 @@ Avantage: Vous avez l'habitude d'être toujours dans le chemin lorsque d'autres 
 ------ Description (fr) ------
 <p>Vous avez l'habitude de toujours être dans le passage des autres créatures qui tntent de se déplacer. Faites un  test d'Acrobaties contre le DD de Réflexes d'une créature adjacente.</p>
 <hr />
-<p><strong>Succès critique</strong> La créature cible obtient une pénalité de circonstance de –2 aux jets de Réflexes et est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} jusqu'au début de votre prochain tour.</p>
-<p><strong>Succès</strong> La créature cible obtient une pénalité de circonstance de -2 aux jets de Réflexes jusqu'au début de votre prochain tour.</p>
+<p><strong>Succès critique</strong> La créature cible obtient une pénalité de circonstances de –2 aux jets de Réflexes et est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} jusqu'au début de votre prochain tour.</p>
+<p><strong>Succès</strong> La créature cible obtient une pénalité de circonstances de -2 aux jets de Réflexes jusqu'au début de votre prochain tour.</p>
