--- a/data/feats/ancestry-01-iRztLGEK5OfjZTPg.htm
+++ b/data/feats/ancestry-01-iRztLGEK5OfjZTPg.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’re skilled at beating a foe when their morale is already breaking.
-Avantage: Vous êtes doué pour battre un ennemi lorsque son moral est déjà atteint.
+Avantage: Vous êtes doué pour battre un ennemi lorsque son moral flanche.
 
 ------ Description (en) ------
 <p>You're skilled at beating a foe when their morale is already breaking. When you succeed at a melee weapon Strike against a @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} foe, that foe can't reduce their frightened condition below 1 until the beginning of your next turn.</p>
