--- a/data/feats/ancestry-01-IFvjnLMw3ht8f84U.htm
+++ b/data/feats/ancestry-01-IFvjnLMw3ht8f84U.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are among the most common of changelings—those born to green hags —and a vibrant green eye signifies that parentage.
-Avantage: Vous faites partie des changeants les plus courants - ceux qui sont nés de sorcières vertes - et un œil vert vibrant signifie cette filiation.
+Avantage: Vous savez mentir et prendre au dépourvu ceux qui vous croient.
 
 ------ Description (en) ------
 <p>You are among the most common of changelings-those born to green hags-and a vibrant green eye signifies that parentage. Your mother's manipulative nature and versatile voice gives you an edge when deceiving others.</p>
 <p>You gain the @Compendium[pf2e.feats-srd.B6HbYsLBWb1RR6Fx]{Charming Liar} skill feat. If you roll Deception for initiative, foes in that combat encounter that haven't acted yet are @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} against you.</p>
 ------ Description (fr) ------
-<p>Vous êtes parmi les plus communs des changelins - ceux nés d'une guenaude verte - et un oeil vert vif marque cette parenté. La nature manipulatrice de votre mère naturelle et sa voix polyvalente vous donne l'avantage pour duper les autres.</p>
+<p>Vous êtes parmi les plus communs des changelins - ceux nés d'une guenaude verte - et un œil vert vif marque cette parenté. La nature manipulatrice de votre mère naturelle et sa voix polyvalente vous donne l'avantage pour duper les autres.</p>
 <p>Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.B6HbYsLBWb1RR6Fx]{Menteur charismatique}. Si vous lancez un test de Duperie pour déterminer l'initiative, les adversaires dans cette rencontre qui n'ont pas agi avant vous sont @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} pour ce qui vous concerne.</p>
