--- a/data/feats/ancestry-01-jEJ6AWCctirMT7p0.htm
+++ b/data/feats/ancestry-01-jEJ6AWCctirMT7p0.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your mother was a sea hag , granting you one sea-green or blue eye.
-Avantage: Ta mère était une sorcière de la mer, elle t'a donné un œil vert de mer ou bleu.
+Avantage: Votre mère était une sorcière de la mer et vous êtes à l'aise dans l'eau.
 
 ------ Description (en) ------
 <p>Your mother was a sea hag, granting you one sea-green or blue eye. You find comfort both in the sea and on the shore.</p>
