--- a/data/feats/ancestry-01-JS24EjgLYcHB9E3T.htm
+++ b/data/feats/ancestry-01-JS24EjgLYcHB9E3T.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You stimulate your nanites, forcing your body to temporarily increase its efficiency.
-Avantage: Vous stimulez vos nanites, forçant votre corps à augmenter temporairement son efficacité.
+Avantage: Vous stimulez vos nanites pour obtenir un bonus de statut de +2 au test de compétence déclencheur.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour<br /><strong>Trigger</strong> You attempt a skill check requiring three actions or fewer.</p>
@@ -14,6 +14,6 @@ Avantage: Vous stimulez vos nanites, forçant votre corps à augmenter temporair
 <p>You stimulate your nanites, forcing your body to temporarily increase its efficiency. You gain a +2 status bonus to the triggering skill check. In addition, your circuitry glows, lighting a 10-foot emanation with dim light for 1 round.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par heure</p>
-<p><strong>Déclencheur</strong> Vous tentez un test de compétences nécessitant tris actions ou moins.</p>
+<p><strong>Déclencheur</strong> Vous tentez un test de compétences nécessitant trois actions ou moins.</p>
 <hr />
-<p>Vous stimulez vos nanites, forçant votre corps à accroître temporrairement son efficacité. Vous obtenez un bonus de statut de +2 au test de compétence déclencheur. De plus, votre circuiterie brille, illuminant une émanation de 3 m de lumière faible pendant 1 round.</p>
+<p>Vous stimulez vos nanites, forçant votre corps à accroître temporrairement son efficacité. Vous obtenez un bonus de statut de +2 au test de compétence déclencheur. De plus, votre circuiterie brille, produisant une lumière faible dans une émanation de 3 m pendant 1 round.</p>
