--- a/data/feats/ancestry-01-KQVE4FsDd9RFpWRz.htm
+++ b/data/feats/ancestry-01-KQVE4FsDd9RFpWRz.htm
@@ -1,9 +1,12 @@
 Name: Improvisational Defender
 Nom: Défenseur improvisé
 PrereqEN: 
-Avantage:
 PrereqFR: 
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: vous ne subissez pas la pénalité d'objet de –2 aux jets d'attaque avec les armes improvisées ou de mauvaise qualité.
 
 ------ Description (en) ------
 <p>You are always prepared for fights that frequently disrupt seemingly peaceful times. When you use an improvised weapon or a shoddy weapon, you don't take the -2 item penalty to attack rolls.</p>
