--- a/data/feats/ancestry-01-kCO4r8NOm8E2T3eH.htm
+++ b/data/feats/ancestry-01-kCO4r8NOm8E2T3eH.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your muscles are tightly honed.
-Avantage: Vos muscles sont bien affûtés.
+Avantage: Votre Vitesse augmente de 1,50 m.
 
 ------ Description (en) ------
 <p>Your muscles are tightly honed. Your Speed increases by 5 feet.</p>
