--- a/data/feats/ancestry-01-kqRFoXfErUFEndIs.htm
+++ b/data/feats/ancestry-01-kqRFoXfErUFEndIs.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Drawing moisture from the atmosphere, you create a disc of hovering water that deflects attacks.
-Avantage: En aspirant l'humidité de l'atmosphère, vous créez un disque d'eau flottant qui dévie les attaques.
+Avantage: Vous obtenez un bonus de +1 à la CA jusqu'au début de votre prochain tour.
 
 ------ Description (en) ------
 <p>Drawing moisture from the atmosphere, you create a disc of hovering water that deflects attacks. You gain a +1 circumstance bonus to AC until the start of your next turn.</p>
