--- a/data/feats/ancestry-01-JP5pptkl1Fx1JK4m.htm
+++ b/data/feats/ancestry-01-JP5pptkl1Fx1JK4m.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your fists have been forged by battle, your naturally tough skin and dense bone further hardened by conflict.
-Avantage: Vos poings ont été forgés par la bataille, votre peau naturellement dure et vos os denses ont été durcis par le conflit.
+Avantage: Votre attaque de poing est létal et repousse vos adversaires.
 
 ------ Description (en) ------
 <p>Your fists have been forged by battle, your naturally tough skin and dense bone further hardened by conflict.</p>
 <p>Your fist unarmed attacks no longer have the nonlethal trait and gain the shove weapon trait.</p>
 ------ Description (fr) ------
 <p>Vos poings ont été forgés par la bataille, votre peau naturellement robuste et vos os denses ont été endurcis par le conflit.</p>
-<p>Votre attaque à mains nues de poings perd le trait non létal et obtiennent le trait d'arme Pousser.</p>
+<p>Votre attaque à mains nues de poings perd le trait non létal et obtient le trait d'arme Pousser.</p>
