--- a/data/feats/ancestry-01-LLQ5SO2c44uXDFJk.htm
+++ b/data/feats/ancestry-01-LLQ5SO2c44uXDFJk.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: By birth or through training, your tail is strong enough to make for a powerful melee weapon.
-Avantage: De naissance ou par entraînement, votre queue est suffisamment forte pour constituer une arme de mêlée puissante.
+Avantage: Vous obtenez une attaque à mains nues de queue qui inflige 1d6 dégâts contondants et possède le trait Balayage.
 
 ------ Description (en) ------
 <p>By birth or through training, your tail is strong enough to make for a powerful melee weapon. You gain a tail unarmed attack that deals 1d6 bludgeoning damage and has the sweep trait.</p>
