--- a/data/feats/ancestry-01-l0VBbymCVT1Qz9t9.htm
+++ b/data/feats/ancestry-01-l0VBbymCVT1Qz9t9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You move with the wind always at your back.
-Avantage: Vous vous déplacez avec le vent toujours dans le dos.
+Avantage: Votre Vitesse augmente de 1,50 mètres.
 
 ------ Description (en) ------
 <p>You move with the wind always at your back. Your Speed increases by 5 feet.</p>
