--- a/data/feats/ancestry-01-lqhhvDJAjPw6LZy5.htm
+++ b/data/feats/ancestry-01-lqhhvDJAjPw6LZy5.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to smoke and haze.
-Avantage: Vous avez un lien avec la fumée et la brume.
+Avantage: Vous gagnez la réaction Se fondre dans la fumée.
 
 ------ Description (en) ------
 <p>You have a connection to smoke and haze. You gain the @Compendium[pf2e.actionspf2e.pTHMZLqWDJ3lkan9]{Smoke Blending} reaction.</p>
 ------ Description (fr) ------
-<p>Vous êtes en connexion avec la fumée et la brume. Vous gagnez la réaction @Compendium[pf2e.actionspf2e.pTHMZLqWDJ3lkan9]{Se Fondre dans la fumée}.</p>
+<p>Vous êtes en connexion avec la fumée et la brume. Vous gagnez la réaction @Compendium[pf2e.actionspf2e.pTHMZLqWDJ3lkan9]{Se fondre dans la fumée}.</p>
