--- a/data/feats/ancestry-01-LUXBuTAuK1glHOkJ.htm
+++ b/data/feats/ancestry-01-LUXBuTAuK1glHOkJ.htm
@@ -6,7 +6,7 @@ PrereqFR: Vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: You can see in the darkness as easily as a fiend.
-Avantage: Vous pouvez voir dans l'obscurité aussi facilement qu'un démon.
+Avantage: Vous obtenez Vision dans le noir.
 
 ------ Description (en) ------
 <p>You can see in the darkness as easily as a fiend. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
