--- a/data/pathfinder-bestiary/b8NQkby4QV4uOqFT.htm
+++ b/data/pathfinder-bestiary/b8NQkby4QV4uOqFT.htm
@@ -1,6 +1,6 @@
 Name: Cave Bear
 Nom: Ours des cavernes
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
