--- a/data/pathfinder-bestiary/B8QjalVNcWjuqgG7.htm
+++ b/data/pathfinder-bestiary/B8QjalVNcWjuqgG7.htm
@@ -1,6 +1,6 @@
 Name: Phistophilus 
 Nom: Phistophilus
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
