--- a/data/pathfinder-bestiary/bAjHCeyNcPRqOmLv.htm
+++ b/data/pathfinder-bestiary/bAjHCeyNcPRqOmLv.htm
@@ -1,9 +1,9 @@
 Name: Changeling Exile
-Nom: Exilée changeline
-État: changé
+Nom: Exilée Changeline
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 This changeling exile is the child of a night hag or dreamthief hag.<br /><br />
 ------ Description (fr) ------
-Cette exilée changeline est l’enfant d’une guenaude noire ou d’une guenaude voleuse de rêves.<br><br>
+Cette Exilée Changeline est l’enfant d’une Guenaude noire ou d’une Guenaude voleuse de rêves.<br><br>
