--- a/data/pathfinder-bestiary/bIXfNKFWduf8MH0f.htm
+++ b/data/pathfinder-bestiary/bIXfNKFWduf8MH0f.htm
@@ -1,9 +1,9 @@
 Name: Ogre Boss
 Nom: Boss ogre
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 In ogre society, might makes more than right-it makes the rules. The strongest or most violent ogre in a family  is invariably that family's boss. Quick to hook fallen foes on their weapons, even other ogres fear the repercussions of displeasing an ogre boss. When an ogre boss barks out commands, the other members of the family move quickly to obey.
 ------ Description (fr) ------
-Dans la société des ogres, la loi du plus fort est non seulement la meilleure mais elle permet aussi d’imposer les règles. L’ogre le plus violent ou le plus fort au sein d’une famille (c’est généralement le même ogre) est toujours le boss du clan. N’hésitant pas à embrocher ses adversaires vaincus sur ses armes, même les autres ogres redoutent de contrarier un boss. Quand ce dernier aboie ses ordres, les autres membres de la famille lui obéissent rapidement.
+Dans la société des Ogres, la loi du plus fort est non seulement la meilleure mais elle permet aussi d’imposer les règles. L’Ogre le plus violent ou le plus fort au sein d’une famille (c’est généralement le même Ogre) est toujours le Boss du clan. N’hésitant pas à embrocher ses adversaires vaincus sur ses armes, même les autres Ogres redoutent de contrarier un Boss. Quand ce dernier aboie ses ordres, les autres membres de la famille lui obéissent rapidement.
