--- a/data/pathfinder-bestiary/BLFEu9jCKPAMko01.htm
+++ b/data/pathfinder-bestiary/BLFEu9jCKPAMko01.htm
@@ -1,9 +1,9 @@
 Name: Living Waterfall
 Nom: Cascade vivante
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Living waterfalls are humanoid-shaped columns of churning water.<br /><br />
 ------ Description (fr) ------
-Les cascades vivantes sont des colonnes d’eau bouillonnante de forme humanoïde.<br><br>
+Les Cascades vivantes sont des colonnes d’eau bouillonnante de forme humanoïde.<br><br>
