--- a/data/pathfinder-bestiary/cBHpMcVaLRPZu9po.htm
+++ b/data/pathfinder-bestiary/cBHpMcVaLRPZu9po.htm
@@ -1,9 +1,9 @@
 Name: Zephyr Hawk
-Nom: Faucon zéphyr
-État: changé
+Nom: Faucon Zéphyr
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Zephyr hawks drift among the currents of the Plane of Air in great flocks.<br /><br />
 ------ Description (fr) ------
-Les faucons zéphyrs planent en grandes volées dans les courants aériens du plan de l’air.<br><br>
+Les Faucons Zéphyrs planent en grandes volées dans les courants aériens du plan de l’air.<br><br>
