--- a/data/pathfinder-bestiary/cDm6PzhO5nXlkGoi.htm
+++ b/data/pathfinder-bestiary/cDm6PzhO5nXlkGoi.htm
@@ -1,9 +1,9 @@
 Name: Orc Brute
-Nom: Brute orque
-État: changé
+Nom: Brute Orque
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 If orc armies are rarely well organized, this shortcoming can likely be traced to the furious and undisciplined rank-and-file brutes who make up the bulk of an orc warband.<br /><br />
 ------ Description (fr) ------
-Si les armées orques sont rarement bien organisées, cette faiblesse est très probablement due aux brutes indisciplinées et enragées qui constituent la masse d’une horde.<br><br>
+Si les armées orques sont rarement bien organisées, cette faiblesse est très probablement due aux Brutes indisciplinées et enragées qui constituent la masse d’une horde.<br><br>
