--- a/data/pathfinder-bestiary/Cq8sRhVVF0hagBu6.htm
+++ b/data/pathfinder-bestiary/Cq8sRhVVF0hagBu6.htm
@@ -1,9 +1,9 @@
 Name: Vampire Count
-Nom: Vampire, comte
-État: changé
+Nom: Vampire, Comte
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Vampire counts rule their demesnes through a mix of fear and cruelty.<br /><br />
 ------ Description (fr) ------
-Un comte vampire règne sur son domaine en exerçant un mélange de peur et de cruauté.<br><br>
+Un Comte Vampire règne sur son domaine en exerçant un mélange de peur et de cruauté.<br><br>
