--- a/data/pathfinder-bestiary/csRH8Fx0r6iMWlFc.htm
+++ b/data/pathfinder-bestiary/csRH8Fx0r6iMWlFc.htm
@@ -1,6 +1,6 @@
 Name: Ether Spider
 Nom: Araignée de l'éther
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
