--- a/data/classfeatures/cleric-11-7PzcKaDGy6tIkQh4.htm
+++ b/data/classfeatures/cleric-11-7PzcKaDGy6tIkQh4.htm
@@ -1,5 +1,5 @@
 Name: Lightning Reflexes (Level 11)
-Nom: Réflexes éclair (Niveau 11)
+Nom: Réflexes fulgurants (Niveau 11)
 État: libre
 
 ------ Description (en) ------
