--- a/data/classfeatures/ranger-01-6v4Rj7wWfOH1882r.htm
+++ b/data/classfeatures/ranger-01-6v4Rj7wWfOH1882r.htm
@@ -1,5 +1,5 @@
 Name: Hunter's Edge: Flurry
-Nom: spécialité du chasseur : Déluge
+Nom: Spécialité du chasseur : Déluge
 État: officielle
 
 ------ Description (en) ------
