--- a/data/classfeatures/champion-01-nxZYP3KGfTSkaW6J.htm
+++ b/data/classfeatures/champion-01-nxZYP3KGfTSkaW6J.htm
@@ -1,7 +1,6 @@
 Name: The Tenets of Good
-Nom: Les principes du bien
-État: changé
-État d'origine: officielle
+Nom: Les principes du Bien
+État: officielle
 
 ------ Description (en) ------
 <p>All champions of good alignment follow these tenets.</p>
@@ -13,5 +12,5 @@ Nom: Les principes du bien
 <p>Tous les champions d’alignement bon suivent ces principes :</p>
 <ul>
 <li>Vous ne devez jamais accomplir des actes que votre divinité condamne ou commettre sciemment un acte malveillant (commettre un meurtre, infliger des tortures ou lancer un sort du mal, entre autres).</li>
-<li>Vous ne devez jamais nuire sciemment à un innocent ou laisser un innocent se faire malmener sous vos yeux par votre inaction quand vous savez pertinemment que vous pourriez le sauver. Ce principe ne vous oblige pas à agir contre une menace potentielle envers des innocents susceptible de se manifester dans un avenir plus ou moins proche ou à sacrifier votre vie pour les protéger.&nbsp;</li>
+<li>Vous ne devez jamais nuire sciemment à un innocent ou laisser un innocent se faire malmener sous vos yeux par votre inaction quand vous savez pertinemment que vous pourriez l'empêcher'. Ce principe ne vous oblige pas à agir contre une menace potentielle envers des innocents susceptible de se manifester dans un avenir plus ou moins proche ou à sacrifier votre vie pour les protéger.</li>
 </ul>
