--- a/data/classfeatures/monk-15-dUMsM0yDTCdV31p6.htm
+++ b/data/classfeatures/monk-15-dUMsM0yDTCdV31p6.htm
@@ -1,7 +1,6 @@
 Name: Third Path to Perfection (Fortitude)
-Nom: Troisième voie vers la perfection -
-État: changé
-État d'origine: officielle
+Nom: Troisième voie vers la perfection - Vigueur
+État: officielle
 
 ------ Description (en) ------
 <p>You have made great progress in your personal studies of enlightenment. Choose one of the saving throws you selected for path to perfection or second path to perfection. Your proficiency rank for the chosen type of save increases to legendary. When you roll a critical failure on the chosen type of save, you get a failure instead. When you roll a failure on the chosen type of save against an effect that deals damage, you take half damage.</p>
