--- a/data/feats/ancestry-01-MXkklchuimVSHZyd.htm
+++ b/data/feats/ancestry-01-MXkklchuimVSHZyd.htm
@@ -2,12 +2,11 @@ Name: Theoretical Acumen
 Nom: Perspicacité théorique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You study a creature’s form and behavior to hypothesize likely means of overcoming its strengths.
-Avantage: Vous étudiez la forme et le comportement d'une créature pour émettre des hypothèses sur les moyens de surmonter ses forces.
+Avantage: Votre connaissance du comportement d'une créature vous donne les moyens de surmonter ses capacités.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> You succeed at a skill check to @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Recall Knowledge} to identify a creature.<br /></p>
@@ -17,4 +16,4 @@ Avantage: Vous étudiez la forme et le comportement d'une créature pour émettr
 <p><<strong>Fréquence</strong> Une fois par jour</p>
 <p><strong>Déclencheur</strong> Vous obtenez un succès à un test de connaissance pour @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Vous souvenir} pour identifier une créature.</p>
 <hr />
-<p>Vous étudiez la forme et le comportement d'une créature pour former des hypothèses sur les moyens de vaincre ses capacités. Une fois avant la fin de votre prochain tour, vous pouvez utiliser le modificateur de compétence du test déclencheur au lieu de votre modificateur du jet de sauvegarde contre une des capacités de la créature, au lieu de votre modificateur de Perception pour @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Chercher} la créature, au lieu de votre modificateur de Duperie pour @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feinter} la créature ou au lieu de votre modificateur d'Intimidation pour @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} la créature. De manière alternative, contre l'une des attaques de la créature, vous pouvez utiliser votre DD pour la compétence utilisée dans le test déclencheur à la place de votre CA.</p>
+<p>Vous étudiez la forme et le comportement d'une créature pour former des hypothèses sur les moyens de vaincre ses capacités. Une fois avant la fin de votre prochain tour, vous pouvez utiliser le modificateur de compétence du test déclencheur à la place de votre modificateur de jet de sauvegarde contre une des capacités de la créature, à la place de votre modificateur de Perception pour @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Chercher} la créature, à la place de votre modificateur de Duperie pour @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feinter} la créature ou à la place de votre modificateur d'Intimidation pour @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} la créature. De manière alternative, contre l'une des attaques de la créature, vous pouvez utiliser votre DD dans la compétence utilisée dans le test déclencheur à la place de votre CA.</p>
