--- a/data/feats/ancestry-01-MbvPuMVy2VhftJgd.htm
+++ b/data/feats/ancestry-01-MbvPuMVy2VhftJgd.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You dive into the water with exceptional skill and connection to the waves, urging the water itself to cushion your fall.
-Avantage: Vous plongez dans l'eau avec une habileté exceptionnelle et une connexion avec les vagues, poussant l'eau elle-même à amortir votre chute.
+Avantage: Vous ne subissez pas de dégâts de chute lorsque vous tombez dans l'eau.
 
 ------ Description (en) ------
 <p>You dive into the water with exceptional skill and connection to the waves, urging the water itself to cushion your fall. You intentionally Leap or otherwise fall into the water, taking no falling damage regardless of the distance.</p>
 ------ Description (fr) ------
-<p>Vous plongez dans l'eau avec une compétence exceptionnelle et un lien avec les vagues, poussant l'eau elle-même à amortir votre chute. Vous Bondissez intentionnellement ou tombez autrement dans l'eau, ne subissant aucun dégât de chute quelle que soit la distance.</p>
+<p>Vous plongez dans l'eau avec une compétence exceptionnelle et possédez un lien avec les vagues, poussant l'eau elle-même à amortir votre chute. Vous Bondissez intentionnellement ou tombez autrement dans l'eau sans subir le moindre dégât de chute, quelle que soit la distance.</p>
