--- a/data/feats/ancestry-01-N3xyK9keDm00oUY6.htm
+++ b/data/feats/ancestry-01-N3xyK9keDm00oUY6.htm
@@ -2,12 +2,11 @@ Name: Inner Fire
 Nom: Feu intérieur
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can call the fire inside you into the palm of your hand.
-Avantage: Vous pouvez appeler le feu qui est en vous dans la paume de votre main.
+Avantage: Vous lancez le tour de magie Flammes à volonté.
 
 ------ Description (en) ------
 <p>You can call the fire inside you into the palm of your hand. You can cast the @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Produce Flame} cantrip as an innate primal or arcane spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
