--- a/data/feats/ancestry-01-OKSsFlHY5UKc4dKu.htm
+++ b/data/feats/ancestry-01-OKSsFlHY5UKc4dKu.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You shroud your arms and held weapons in elemental magic.
-Avantage: Vous enveloppez vos bras et vos armes d'une magie élémentaire.
+Avantage: Vous infligez temporairement des dégâts élémentaires lorsque vous attaquez.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous enveloppez vos bras et vos armes d'une magie élémentaire.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous voilez vos bras et les armes tenues de magie élémentaire. Choisissez un élément. Jusqu'à la fin de votre prochain tour, vos Frappes infligent [[/r 1d6]] dégâts supplémentaires du type indiqué et ont le trait correspondant à l'élément : électricité pour l'air, contondants pour la terre, feu pour le feu ou froid pour l'eau.</p>
+<p>Vous enveloppez vos bras et les armes que vous tenez de magie élémentaire. Choisissez un élément. Jusqu'à la fin de votre prochain tour, vos Frappes infligent [[/r 1d6]] dégâts supplémentaires du type indiqué et ont le trait correspondant à l'élément : électricité pour l'air, contondants pour la terre, feu pour le feu ou froid pour l'eau.</p>
