--- a/data/feats/ancestry-01-PGVXjbAi1Fa4uTmD.htm
+++ b/data/feats/ancestry-01-PGVXjbAi1Fa4uTmD.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are surrounded by a halo of light and goodness at all times.
-Avantage: Vous êtes entouré d'un halo de lumière et de bonté à tout moment.
+Avantage: Vous générez un halo de lumière et de bonté à tout moment.
 
 ------ Description (en) ------
 <p>You are surrounded by a halo of light and goodness at all times.</p>
