--- a/data/feats/ancestry-01-PlhPpdwIV0rIAJ8K.htm
+++ b/data/feats/ancestry-01-PlhPpdwIV0rIAJ8K.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Fierceness in battle runs through your blood, and you refuse to fall from your injuries.
-Avantage: La férocité au combat coule dans votre sang, et vous refusez de tomber de vos blessures.
+Avantage: Vous ne mourez pas en passant à 0 points de vie et êtes seulement Blessé.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -14,7 +14,7 @@ Avantage: La férocité au combat coule dans votre sang, et vous refusez de tomb
 <hr />
 <p>Fierceness in battle runs through your blood, and you refuse to fall from your injuries. You avoid being knocked out and remain at 1 Hit Point, and your wounded condition increases by 1.</p>
 ------ Description (fr) ------
-<p><strong>Fréquence </strong> une fois par jour </p>
-<p><strong>Déclencheur. </strong> Vous êtes réduit à 0 point de vie, mais ne mourez pas sur-le-champ.</p>
+<p><strong>Fréquence</strong> une fois par jour </p>
+<p><strong>Déclencheur</strong> Vous êtes réduit à 0 point de vie, mais ne mourez pas sur-le-champ.</p>
 <hr />
-<p>Du feu coule dans vos veines et vous empêche de succomber à vos blessures. Vous n’êtes pas assommé et conservez 1 point de vie et l’intensité de votre état blessé augmente de 1.</p>
+<p>Du feu coule dans vos veines et vous empêche de succomber à vos blessures. Vous n’êtes pas assommé et conservez 1 point de vie et l’intensité de votre état Blessé augmente de 1.</p>
