--- a/data/feats/ancestry-01-m9tKNsZQQjHdsmEN.htm
+++ b/data/feats/ancestry-01-m9tKNsZQQjHdsmEN.htm
@@ -6,7 +6,7 @@ PrereqFR: Vous avez une capacité de classe de lancement de sort avec la traditi
 
 ------ Benefits and spoiler ----
 Benefits: You know the truth behind old stories that tell of sending a fetish of bone and sinew to seek vengeance.
-Avantage: Vous connaissez la vérité derrière les vieilles histoires qui racontent l'envoi d'un fétiche d'os et de tendons pour se venger.
+Avantage: Vous pouvez convoquer une créature faites d'os pour vous venger.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Erutaki ethnicity<br /></p>
@@ -15,4 +15,4 @@ Avantage: Vous connaissez la vérité derrière les vieilles histoires qui racon
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Erutaki</p>
 <hr />
-<p>Vous savez que la vérité se cache derrière les vieilles histoires qui parlent de lancer un fétiche d'os et de tendons pour obtenir vengeance. Ces vieilles magies vous permettent de convoquer des créatures artificielles avec facilité. Vous ajoutez le sort @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{convocation de créature artificielle} à votre liste de sort. Les créatures artificielles que vous convoquez ont une apparence distinctive faite de gravures en ivoire et si vous ajoutez une goutte de sang, une boucle de cheveu ou une autre partie du corps d'une créature comme composante matérielle lors de l'incantation, la créature artificielle invoquée obtient un bonus de statut de +4 aux tests de Perception pour sentir ou localiser cette créature.</p>
+<p>Vous connaissez la vérité qui se cache derrière les vieilles histoires qui parlent d'envoyer un fétiche d'os et de tendons pour se venger. Cette antique magie vous permet de convoquer des créatures artificielles avec facilité. Vous ajoutez le sort @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{convocation de créature artificielle} à votre liste de sort. Les créatures artificielles que vous convoquez ont une apparence distinctive faite de gravures en ivoire et si vous ajoutez une goutte de sang, une boucle de cheveu ou une autre partie du corps d'une créature comme composante matérielle lors de l'incantation, la créature artificielle invoquée obtient un bonus de statut de +4 aux tests de Perception pour sentir ou localiser cette créature.</p>
