--- a/data/feats/ancestry-01-M5195FvfCN3X7gi9.htm
+++ b/data/feats/ancestry-01-M5195FvfCN3X7gi9.htm
@@ -6,12 +6,12 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have particularly long, jagged tusks perfect for tearing meat from bone.
-Avantage: Vous avez des défenses particulièrement longues et dentelées, parfaites pour arracher la viande de l'os.
+Avantage: Vous obtenez une attaque à mains nues de défenses qui infligent 1d6 dégâts perforants.
 
 ------ Description (en) ------
 <p>You have particularly long, jagged tusks perfect for tearing meat from bone. You gain a tusks unarmed attack that deals [[/r 1d6 #piercing]] piercing damage. Your tusks are in the brawling group and have the finesse and unarmed traits.</p>
 <p><strong>Special</strong> You can take this feat only at 1st level, and you can't retrain into this feat. You can retrain out of this feat only through drastic measures such as breaking or filing your tusks.</p>
 ------ Description (fr) ------
-<p>Vous possédez de particulièrement longues défenses dentelées parfaites pour arracher la viande de l'os. Vous obtenez un attaque à mains nues avec ces défenses qui infligent  [[/r 1d6 #perforants]] dégâts perforants. Vos défenses font partie du groupe pugilat et possèdent les traits à mains nues et finesse.</p>
+<p>Vous possédez de particulièrement longues défenses dentelées parfaites pour arracher la viande de l'os. Vous obtenez une attaque à mains nues de défenses qui inflige [[/r 1d6 #perforants]] dégâts perforants. Vos défenses font partie du groupe pugilat et possèdent les traits à mains nues et finesse.</p>
 <hr />
 <p><strong>Spécial</strong> Vous ne pouvez choisir ce don qu'au premier niveau et vous ne pouvez utiliser le réapprentissage pour obtenir ce don. Vous ne pouvez le perdre qu'en utilisant des mesures drastiques comme perdre ou limer vos défenses.</p>
