--- a/data/feats/ancestry-01-MS53Ds75BT379ZFm.htm
+++ b/data/feats/ancestry-01-MS53Ds75BT379ZFm.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Diplomatie
 
 ------ Benefits and spoiler ----
 Benefits: The way you cringe or use those puppydog eyes you've been practicing elicits an empathetic response in the attacker.
-Avantage: La façon dont vous grimacez ou utilisez ces yeux de chien battu que vous avez pratiqués suscite une réponse empathique chez l'agresseur.
+Avantage: Vous suscitez une réponse empathique chez l'agresseur qui l'empêche de vous frapper.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are attacked by a creature that you haven't yet acted hostile toward. You must use this reaction before the creature rolls its attack.</p>
@@ -20,6 +20,6 @@ Avantage: La façon dont vous grimacez ou utilisez ces yeux de chien battu que v
 <hr />
 <p>La manière dont vous vous êtes entraîné à vous tasser ou à faire les yeux de chien battu provoque une réponse empathique de la part de votre agresseur. Faites un test de Diplomatie contre le DD de Volonté de l'agresseur.</p>
 <hr />
-<p><strong>Succès critique</strong> La créature retient son attaque , gâchant cette action et ne peut utiliser d'action hostile à votre encontre  jusqu'au début de son prochain tour.</p>
-<p><strong>Succès</strong> La créature subit une pénalité de circonstance de –2 aux dégâts de l'attaque qui l'a déclenchée et à toutes les Frappes contre vous jusq'au début de son prochain tour. La pénalité est de –4 si vous êtes un expert en Diplomatie, de –6 si vous êtes un maître et de –8 si vous êtes légendaire.</p>
+<p><strong>Succès critique</strong> La créature retient son attaque, gâchant cette action et ne peut utiliser d'action hostile à votre encontre jusqu'au début de son prochain tour.</p>
+<p><strong>Succès</strong> La créature subit une pénalité de circonstance de –2 aux dégâts de l'attaque qui l'a déclenchée et à toutes les Frappes contre vous jusqu'au début de son prochain tour. La pénalité est de –4 si vous êtes un expert en Diplomatie, de –6 si vous êtes un maître et de –8 si vous êtes légendaire.</p>
 <p><strong>Échec</strong> L'attaque de la créature n'est pas affectée et la créature est temporairement immunisée à votre supplique empathique pendant 24 heures.</p>
