--- a/data/feats/ancestry-01-Nn80wBZYJZxcuKsJ.htm
+++ b/data/feats/ancestry-01-Nn80wBZYJZxcuKsJ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Through conditioning or experience, you've mastered the art of composure, even in the face of fear.
-Avantage: Par conditionnement ou par expérience, vous avez maîtrisé l'art de garder votre calme, même face à la peur.
+Avantage: Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets avec le trait peur et de +2 contre l'Intimidation.
 
 ------ Description (en) ------
 <p>Through conditioning or experience, you’ve mastered the art of composure, even in the face of fear. You gain a +1 circumstance bonus to saves against effects with the fear trait, and a +2 circumstance bonus to your Will DC against Intimidate skill actions, such as Demoralize.</p>
