--- a/data/feats/ancestry-01-OTjRxyCtwPoqNFP2.htm
+++ b/data/feats/ancestry-01-OTjRxyCtwPoqNFP2.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've trained with weapons ideal for subterranean efficiency.
-Avantage: Tu t'es entraîné avec des armes idéales pour l'efficacité souterraine.
+Avantage: Vous êtes qualifié avec l'arbalète, le grand pic de guerre, le pic de guerre léger, le pic et la lance.
 
 ------ Description (en) ------
 <p>You’ve trained with weapons ideal for subterranean efficiency. You are trained with the crossbow, greatpick, light pick, pick, and spear. You also gain access to all uncommon kobold weapons. For the purpose of determining your proficiency, martial kobold weapons are simple weapons, and advanced kobold weapons are martial weapons.</p>
 ------ Description (fr) ------
-<p>Vous êtes qualifiée avec les armes idéales pour l'efficacité souterraines. Vous êtes qualifié avec l'arbalète, le grand pic de guerre, le pic de guerre léger, le pic et la lance. Vous obtenez accès à toutes les armes kobols peu courantes. Pour les besoins de déterminer votre maîtrise les armes de guerre kobolds sont des armes simples et les armes kobolds avancées sont des armes de guerre.</p>
+<p>Vous êtes qualifié avec les armes idéales pour une efficacité souterraine. Vous êtes qualifié avec l'arbalète, le grand pic de guerre, le pic de guerre léger, le pic et la lance. Vous obtenez accès à toutes les armes kobols peu courantes. Pour les besoins de déterminer votre rang de maîtrise, les armes de guerre kobolds sont considérées comme des armes simples et les armes kobolds évoluées sont considérées comme des armes de guerre.</p>
