--- a/data/feats/ancestry-01-P1dk0LTWkQ1LT1ai.htm
+++ b/data/feats/ancestry-01-P1dk0LTWkQ1LT1ai.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You were born to one of the moroi, the most common vampires, and you share their supernatural fortitude and power of persuasion.
-Avantage: Vous êtes née d'un des moroi, les vampires les plus communs, et vous partagez leur force surnaturelle et leur pouvoir de persuasion.
+Avantage: Vous êtes qualifié en Diplomatie et moins sensible à l'état Drainé.
 
 ------ Description (en) ------
 <p>You were born to one of the moroi, the most common vampires, and you share their supernatural fortitude and power of persuasion.</p>
@@ -15,4 +15,4 @@ Avantage: Vous êtes née d'un des moroi, les vampires les plus communs, et vous
 ------ Description (fr) ------
 <p>Vous êtes issu d'un des moroi, le plus commun des vampires et vous partagez leur vigueur surnaturelle et leur pouvoir de persuasion.</p>
 <p>Lorsque vous avez l'état @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé}, calculez la pénalité à vos jets de Vigueur et la réduction de vos Points de Vie comme si la valeur de l'état était inférieure de 1.</p>
-<p>Vous êtes qualifié en Diplomatie. Si vous devriez déjà être qualifié, vous devenz qualifié dans une compétence de votre choix.</p>
+<p>Vous êtes qualifié en Diplomatie. Si vous devriez déjà être qualifié, vous devenez qualifié dans une compétence de votre choix.</p>
