--- a/data/feats/ancestry-01-Pat4H0VbmApblZxc.htm
+++ b/data/feats/ancestry-01-Pat4H0VbmApblZxc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your elven magic manifests as a simple arcane spell, even if you aren’t formally trained in magic.
-Avantage: Votre magie elfique se manifeste comme un simple sort d'arcane, même si vous n'avez pas reçu de formation officielle en magie.
+Avantage: Vous obtenez un tour de magie arcanique.
 
 ------ Description (en) ------
 <p>Your elven magic manifests as a simple arcane spell, even if you aren't formally trained in magic. Choose one cantrip from the arcane spell list. You can cast this cantrip as an arcane innate spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
