--- a/data/feats/ancestry-01-mQYO501xyMgtIQ3W.htm
+++ b/data/feats/ancestry-01-mQYO501xyMgtIQ3W.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Years of experience among ratfolk communities have made you nimble, and you've learned to run and hide when enemies threaten.
-Avantage: Des années d'expérience parmi les communautés de ratfolk vous ont rendu agile, et vous avez appris à courir et à vous cacher lorsque des ennemis vous menacent.
+Avantage: Vous êtes qualifié en Acrobaties et en Discrétion et en Connaissance des Hommes-rats.
 
 ------ Description (en) ------
 <p>Years of experience among ratfolk communities have made you nimble, and you've learned to run and hide when enemies threaten.</p>
