--- a/data/feats/ancestry-01-nB8BD9rIg9hfFGns.htm
+++ b/data/feats/ancestry-01-nB8BD9rIg9hfFGns.htm
@@ -6,13 +6,12 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You know good artisanship when you see it and can wax poetic about crafting techniques and forms.
-Avantage: Vous savez reconnaître l'artisanat quand vous le voyez et vous pouvez parler avec poésie des techniques et des formes d'artisanat.
+Avantage: Vous êtes qualifié en Artisanat et obtenez le don Évaluation artisanale
 
 ------ Description (en) ------
 <p>You know good artisanship when you see it and can wax poetic about crafting techniques and forms.</p><p>You become trained in Crafting and gain a +1 circumstance bonus on all Crafting checks made to @Compendium[pf2e.actionspf2e.B0Eu3EfwIa9kyDEA]{Recall Knowledge}. If you would automatically become trained in Crafting (from your background or class, for example), you instead become trained in a skill of your choice.</p>
 <p>In addition, you gain the @Compendium[pf2e.feats-srd.voYr7ygVcWmlg1f4]{Crafter's Appraisal} skill feat, enabling you to identify magic items using the Crafting skill.</p>
 ------ Description (fr) ------
 <p>Vous savez reconnaître le bon artisanat lorsque vous le voyez et pouvez partir dans des envolées poétiques à propos des techniques artisanales et des formes.</p>
-<hr>
 <p>Vous êtes qualifié en Artisanat et obtenez un bonus de circonstances de +1 à tous les tests d'Artisanat faits pour @Compendium[pf2e.actionspf2e.B0Eu3EfwIa9kyDEA]{vous Souvenir}. Si vous devriez automatiquement être qualifié en Artisanat (par le biais de votre historique ou de votre classe, par exemple), vous êtes qualifié dans une autre compétence de votre choix à la place.</p>
 <p>De plus, vous obtenez le don de compétence @Compendium[pf2e.feats-srd.voYr7ygVcWmlg1f4]{Évaluation artisanale}, vous permettant d'identifier les objets magiques en utilisant la compétence Artisanat.</p>
