--- a/data/feats/ancestry-01-nfERPRCITBp970HO.htm
+++ b/data/feats/ancestry-01-nfERPRCITBp970HO.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Elves are often skeptical of their half-elven kin, and you are experienced at telling stories of your accomplishments to gain their respect.
-Avantage: Les elfes sont souvent sceptiques à l'égard de leurs parents demi-elfes, et vous avez l'habitude de raconter vos exploits pour gagner leur respect.
+Avantage: Vous êtes qualifié en Représentation et obtenez le don Représentation impressionnante
 
 ------ Description (en) ------
 <p>Elves are often skeptical of their half-elven kin, and you are experienced at telling stories of your accomplishments to gain their respect. You are trained in Performance. If you would automatically become trained in Performance (from your background or class, for example), you instead become trained in a skill of your choice.</p>
 <p>You gain the @Compendium[pf2e.feats-srd.xqAdXRd2gSQcqp5E]{Impressive Performance} feat. When you attempt a Performance check to @Compendium[pf2e.actionspf2e.OX4fy22hQgUHDr0q]{Make an Impression} on an elf, if you roll a critical failure, you get a failure instead.</p>
 ------ Description (fr) ------
-<p>Les elfs sont souvent sceptiques à propos des demi-elfes et vous êtes expérimenté lorsqu'il s'agit de raconter des histoires à propos de ce que vous avez accompli pour obtenir leur respect. Vous êtes qualifié en Représentation. Si vous étiez automatiquement devenu qualifié en  Représentation (du fait de votre historique ou de votre classe, par exemple), vous êtes qualifié à la place dans une autre compétence de votre choix.</p>
+<p>Les elfes sont souvent sceptiques à propos des demi-elfes et vous êtes expérimenté lorsqu'il s'agit de raconter des histoires à propos de ce que vous avez accompli pour obtenir leur respect. Vous êtes qualifié en Représentation. Si vous étiez automatiquement devenu qualifié en Représentation (du fait de votre historique ou de votre classe, par exemple), vous êtes qualifié à la place dans une autre compétence de votre choix.</p>
 <p>Vous obtenez le don @Compendium[pf2e.feats-srd.xqAdXRd2gSQcqp5E]{Représentation impressionnante}. Lorsque vous faites un test de Représentation pour @Compendium[pf2e.actionspf2e.OX4fy22hQgUHDr0q]{Faire bonne impression} sur un elfe, lorsque vous obtenez un échec critique vous considérez qu'il s'agit à la place d'un échec.</p>
