--- a/data/feats/ancestry-01-nqtO5dNnxT4nZDbB.htm
+++ b/data/feats/ancestry-01-nqtO5dNnxT4nZDbB.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: By sinking gently beneath the waves, you obscure your presence and utilize the water as a barrier between you and land combatants.
-Avantage: En vous enfonçant doucement sous les vagues, vous masquez votre présence et utilisez l'eau comme une barrière entre vous et les combattants terrestres.
+Avantage: Vous savez vous camoufler sous l'eau.
 
 ------ Description (en) ------
 <p>By sinking gently beneath the waves, you obscure your presence and utilize the water as a barrier between you and land combatants. While you are submerged just below the water’s surface, you have cover from attacks made by creatures out of the water.</p>
