--- a/data/feats/ancestry-01-nyhQ9xB0rkoAoNbf.htm
+++ b/data/feats/ancestry-01-nyhQ9xB0rkoAoNbf.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your lineage traces back to a daemon, one of the manifestations of horrific forms of death that devour souls within their foul home of Abaddon.
-Avantage: Votre lignée remonte à un démon, l'une des manifestations d'horribles formes de mort qui dévorent les âmes dans leur maison fétide d'Abaddon.
+Avantage: Vous obtenez le don Dur à cuir.
 
 ------ Description (en) ------
 <p>Your lineage traces back to a daemon, one of the manifestations of horrific forms of death that devour souls within their foul home of Abaddon. As a result, you cling tenaciously to the last shreds of your own life force.</p>
