--- a/data/feats/ancestry-01-o4LycqplO14zn6It.htm
+++ b/data/feats/ancestry-01-o4LycqplO14zn6It.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've spent countless hours studying the history of elves on your world and beyond and are a studied expert in your people's ways.
-Avantage: Tu as passé d’innombrables heures à étudier l’histoire des elfes de ton monde et d’ailleurs et tu es un expert reconnu des coutumes de ton peuple.
+Avantage: Vous êtes un fin connaisseur de tout ce qui a trait aux elfes.
 
 ------ Description (en) ------
 <p>You've spent countless hours studying the history of elves on your world and beyond and are a studied expert in your people's ways.</p>
 <p>If you critically fail a check to Recall Knowledge about elves, elven society, or elven history, you get a failure instead.</p>
 ------ Description (fr) ------
-<p>Vous avez passé des heures innombrables à étudier l'histoire des elfes de votre monde et même au-delà et êtes un savant expert des manière de votre peuple.</p>
+<p>Vous avez passé des heures innombrables à étudier l'histoire des elfes de votre monde et même au-delà et êtes un savant expert des manières de votre peuple.</p>
 <p>Si vous obtenez un échec critique pour vous Souvenir à propos des elfes, de la société elfique ou de l'histoire elfique, vous obtenez un échec à la place.</p>
