--- a/data/feats/ancestry-01-o6MXyjSgavTzU5AS.htm
+++ b/data/feats/ancestry-01-o6MXyjSgavTzU5AS.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The earth inside you asserts itself as crystallized gemstones or metals, like a cluster of quartz or veins of iron and gold.
-Avantage: La terre qui est en vous s'affirme sous forme de pierres précieuses ou de métaux cristallisés, comme un amas de quartz ou des veines de fer et d'or.
+Avantage: Vous êtes qualifié en Représentation et obtenez le don Représentation impressionnante.
 
 ------ Description (en) ------
 <p>The earth inside you asserts itself as crystallized gemstones or metals, like a cluster of quartz or veins of iron and gold. This shimmering presence inside your being inspires you to flashy and flamboyant performances. You gain the trained proficiency rank in Performance. If you would automatically become trained in Performance (from your background or class, for example), you instead become trained in a skill of your choice. You gain the @Compendium[pf2e.feats-srd.xqAdXRd2gSQcqp5E]{Impressive Performance} skill feat.</p>
 ------ Description (fr) ------
-<p>La terre à l'intérieur de vous se présente sous forme de métaux ou de pierres précieuses, comme un filon de quartz ou des veines de fer et d'or. Cette présence chatoyante à l'intérieur de votre être vous inspire de représentations flamboyantes et tape-à-l'œil. Vous êtes qualifié en Représentation. Si vous deviez être automatiquement qualifié en Représentation (de par votre historique ou classe, par exemple), vous devenez qualifié à la placedans une compétence de votre choix. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.xqAdXRd2gSQcqp5E]{Représentation impressionnante}.</p>
+<p>La terre à l'intérieur de vous s'affirme sous la forme de métaux ou de pierres précieuses, comme un filon de quartz ou des veines de fer et d'or. Cette présence chatoyante à l'intérieur de votre être vous inspire des représentations flamboyantes et tape-à-l'œil. Vous êtes qualifié en Représentation. Si vous deviez être automatiquement qualifié en Représentation (de par votre historique ou classe, par exemple), vous devenez qualifié à la place dans une compétence de votre choix. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.xqAdXRd2gSQcqp5E]{Représentation impressionnante}.</p>
