--- a/data/feats/ancestry-01-ojp39fVYqFBGAw38.htm
+++ b/data/feats/ancestry-01-ojp39fVYqFBGAw38.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Entertainment comes naturally to you.
-Avantage: Le divertissement vous vient naturellement.
+Avantage: Vous êtes qualifié en Représentation et obtenez un don de compétence en Représentation de niveau 1.
 
 ------ Description (en) ------
 <p>Entertainment comes naturally to you. You become trained in Performance and gain one 1st-level Performance skill feat.</p>
 ------ Description (fr) ------
 <p>L'animation vous est naturelle.</p>
-<p>Vous devenez qualifié en Représentation et obtenez un don de compétence en Représentation de niveau 1.</p>
+<p>Vous êtes qualifié en Représentation et obtenez un don de compétence en Représentation de niveau 1.</p>
