--- a/data/feats/ancestry-01-qVk9htKv47niPmXS.htm
+++ b/data/feats/ancestry-01-qVk9htKv47niPmXS.htm
@@ -1,14 +1,14 @@
 Name: Deep Vision
-Nom: Vision profonde
+Nom: Vision des profondeurs
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your vision is suited for night or the underground.
-Avantage: Votre vision est adaptée à la nuit ou au sous-sol.
+Avantage: Vous obtenez Vision dans le noir.
 
 ------ Description (en) ------
 <p>Your vision is suited for night or the underground. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
 ------ Description (fr) ------
-<p>Votre vision est adaptée pour la nuit ou les souterrains. Vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir}.</p>
+<p>Votre vision est adaptée à la nuit ou aux souterrains. Vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir}.</p>
