--- a/data/feats/ancestry-01-PsLne80WUsD4IFa6.htm
+++ b/data/feats/ancestry-01-PsLne80WUsD4IFa6.htm
@@ -1,10 +1,12 @@
 Name: Dig Quickly
 Nom: Creuser rapidement
 PrereqEN: 
-Avantage:
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous creusez rapidement la terre meuble transformant le terrain en terrain difficile et pouvez utiliser les débris pour éteindre les flammes.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are standing on dirt, sand, snow, or similar particulate material.<br /></p>
@@ -13,4 +15,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous vous trouvez sur de la terre meuble, du sable, de la neige ou sur des matériaux avec des particules du même ordre.</p>
 <hr />
-<p>Vos mains travaillent aussi efficacement que des pelles lorsque vous creusez un trou rapidement. Vous excavez un puits peu profond dans l'espace que vous occupez actuellement, faisant de cette case un terrain difficile (même pour vous). En outre, vous répandez dans les airs un nuage empanaché dans une direction de votre choix. Ce nuage éteint les petits feux non magiques et non tenus et aide à ralentir les flammes sur les créatures enflammées situées dans le cône ; les créatures dans ce cône qui subissent des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{dégâts de feu persistants} peuvent immédiatement faire un test supplémentaire contre un DD nu de 15 pour mettre un terme aux dégâts persistants.</p>
+<p>Vos mains travaillent aussi efficacement que des pelles lorsque vous creusez un trou rapidement. Vous excavez un puits peu profond dans l'espace que vous occupez actuellement, faisant de cette case un terrain difficile (même pour vous). En outre, vous répandez dans les airs un panache de débris dans une direction de votre choix. Ce panache éteint les petits feux non magiques et non tenus et aide à ralentir les flammes sur les créatures enflammées situées dans le cône ; les créatures dans ce cône qui subissent des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{dégâts de feu persistants} peuvent immédiatement faire un test supplémentaire contre un DD nu de 15 pour mettre un terme aux dégâts persistants.</p>
