--- a/data/feats/ancestry-01-QygsOzswFQEYONO3.htm
+++ b/data/feats/ancestry-01-QygsOzswFQEYONO3.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your lineage shows the signs of velstrac tampering, including some curious quirk bequeathed by those shadowy surgeons of flesh and souls.
-Avantage: Votre lignée montre des signes de falsification velstrac, y compris une curieuse bizarrerie léguée par ces chirurgiens de la chair et de l'âme.
+Avantage: Vous obtenez le don Récupération rapide sans avoir à remplir les prérequis.
 
 ------ Description (en) ------
 <p>Your lineage shows the signs of velstrac tampering, including some curious quirk bequeathed by those shadowy surgeons of flesh and souls. Your flesh heals cleanly and quickly—all the better for you to serve as a subject for their ghastly art. You gain the @Compendium[pf2e.feats-srd.N8Xz5fuW6o7GW124]{Fast Recovery} feat, even if you don’t meet the prerequisites.</p>
 ------ Description (fr) ------
-<p>Votre lignée montre les signes de dégradation velstrac, incluant certaines excentricités curieuses transmises par ces ombreux chirurgiens de la chair et des âmes. Votre chair se soigne proprement et rapidement — les deux principales qualités pour pouvoir servir comme un sujet pour leur art épouvantable. Vous obtenez le don @Compendium[pf2e.feats-srd.N8Xz5fuW6o7GW124]{récupération rapide}, même si vous ne remplissez pas les prérequis.</p>
+<p>Votre lignée montre les signes de déformation velstrac, incluant une excentricité bizarre transmise par ces chirurgiens de la chair et de l'âme. Votre chair se soigne proprement et rapidement — les deux principales qualités pour pouvoir servir comme sujet pour leur art épouvantable. Vous obtenez le don @Compendium[pf2e.feats-srd.N8Xz5fuW6o7GW124]{Récupération rapide}, même si vous ne remplissez pas les prérequis.</p>
