--- a/data/feats/ancestry-01-qEOiC2YXYzc8ZZFS.htm
+++ b/data/feats/ancestry-01-qEOiC2YXYzc8ZZFS.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Part of your body has an obvious, fiendish appearance.
-Avantage: Une partie de votre corps a une apparence évidente et diabolique.
+Avantage: Une partie de votre corps possède une apparence fiélone évidente mais vous donne une attaque à mains nues.
 
 ------ Description (en) ------
 <p>Part of your body has an obvious, fiendish appearance. Your hands end in razor-sharp claws, you have hooves instead of feet, sharp teeth fill your mouth, or a whipping tail extends from your spine.</p>
@@ -22,9 +22,9 @@ Avantage: Une partie de votre corps a une apparence évidente et diabolique.
 <p>Une partie de votre corps possède une apparence fiélone évidente. Vos mains se terminent par des griffes en lame de rasoir, vous possédez des sabots au lieu de pieds, des dents effilées emplissent votre bouche ou une queue fouettante qui s'étend à partir de votre colonne vertébrale.</p>
 <p>Vous obtenez à votre choix une des attaques à mains nues suivantes. L'attaque est dans le groupe pugilat et possède les dégâts et les traits listés.</p>
 <ul>
-<li><strong>Griffes</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="slashing" data-formula="1d4" title="slashing"><i class="fas fa-dice-d20"></i> 1d4</a> tranchants (à mains nues, agile, finesse, polyvalent perforant)</li>
-<li><strong>Sabot</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="bludgeoning" data-formula="1d6" title="bludgeoning"><i class="fas fa-dice-d20"></i> 1d6</a> contondants (à mains nues, finesse)</li>
-<li><strong>Mâchoires</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="piercing" data-formula="1d6" title="piercing"><i class="fas fa-dice-d20"></i> 1d6</a> perforants (à mains nues, finesse)</li>
-<li><strong>Queue</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="bludgeoning" data-formula="1d4" title="bludgeoning"><i class="fas fa-dice-d20"></i>1d4</a> contondants (à mains nues, agile, finesse)</li>
+<li><strong>Griffes</strong> 1d4 dégâts tranchants (à mains nues, agile, finesse, polyvalent perforant)</li>
+<li><strong>Sabot</strong> 1d6 dégâts contondants (à mains nues, finesse)</li>
+<li><strong>Mâchoires</strong> 1d6 dégâts perforants (à mains nues, finesse)</li>
+<li><strong>Queue</strong> 1d4 dégâts contondants (à mains nues, agile, finesse)</li>
 </ul>
 <p><strong>Spécial</strong> Vous ne pouvez choisir ce don qu'au niveau 1 et il ne peut faire l'objet d'un réapprentissage et vous ne pouvez pas changer le type d'attaque que vous avez obtenu.</p>
