--- a/data/feats/ancestry-01-qm1lIMLVdsQtVFT0.htm
+++ b/data/feats/ancestry-01-qm1lIMLVdsQtVFT0.htm
@@ -1,14 +1,15 @@
 Name: Stormsoul
-Nom: Âmetempêtueuse
+Nom: Âme tempêtueuse
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your elemental ancestor's influence manifests in you as tumultuous, thundering storms, with dark clouds and bolts of lightning.
-Avantage: L'influence de votre ancêtre élémentaire se manifeste en vous par des orages tumultueux et tonitruants, avec des nuages sombres et des éclairs.
+Avantage: Vous obtenez une résistance à l'électricité égal à la moitié de votre niveau.
 
 ------ Description (en) ------
 <p>Your elemental ancestor’s influence manifests in you as tumultuous, thundering storms, with dark clouds and bolts of lightning. You gain resistance to electricity equal to half your level (minimum 1).</p>
 ------ Description (fr) ------
-<p>L'influence de votre ancêtre élémentaire se manifeste en vous comme des tempêtes tumultueuses, tonnantes avec des nuages noirs et des décharges de foudre. Vous obtenez une résistance à l'électricité égal à la moitié de votre niveau (minimum 1).</p>
+<p>L'influence de votre ancêtre élémentaire se manifeste en vous comme une tempête tumultueuse, tonnante emplie de nuages noirs et de décharges foudroyante.</p>
+<p>Vous obtenez une résistance à l'électricité égal à la moitié de votre niveau (minimum 1).</p>
