--- a/data/feats/ancestry-01-qxQf0HiYBh26mCMT.htm
+++ b/data/feats/ancestry-01-qxQf0HiYBh26mCMT.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You're used to dealing with dangerous situations and sinister creatures.
-Avantage: Vous avez l'habitude de faire face à des situations dangereuses et à des créatures sinistres.
+Avantage: Vous êtes qualifié en Duperie et obtenez le don Diversion interminable.
 
 ------ Description (en) ------
 <p>You’re used to dealing with dangerous situations and sinister creatures. You become trained in Deception (or another skill of your choice, if you’re already trained in Deception), and you gain the @Compendium[pf2e.feats-srd.HEBXaS656MZTiWFu]{Lengthy Diversion} skill feat as a bonus feat.</p>
 ------ Description (fr) ------
-<p>Vous êtes habitué à vous confronter à de dangereuses situations et des créatures sinistres. vous devenez qualifié en Duperie (ou une autre compétence de votre choix, si vous êtes déjà qualifié en Duperie) et vous obtenez le don de compétence @Compendium[pf2e.feats-srd.HEBXaS656MZTiWFu]{Diversion interminable} comme don supplémentaire.</p>
+<p>Vous êtes habitué à vous confronter à de dangereuses situations et des créatures sinistres. Vous êtes qualifié en Duperie (ou une autre compétence de votre choix, si vous êtes déjà qualifié en Duperie) et vous obtenez le don de compétence @Compendium[pf2e.feats-srd.HEBXaS656MZTiWFu]{Diversion interminable} comme don supplémentaire.</p>
