--- a/data/feats/ancestry-01-SJbokJKkFnA6rKkJ.htm
+++ b/data/feats/ancestry-01-SJbokJKkFnA6rKkJ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You trust the strength of your wings and can spread them to glide safely to the ground.
-Avantage: Vous avez confiance en la force de vos ailes et vous pouvez les déployer pour planer en toute sécurité jusqu'au sol.
+Avantage: Vous ne subissez pas de dégâts de chute.
 
 ------ Description (en) ------
 <p>You trust the strength of your wings and can spread them to glide safely to the ground. As long as you can act, you take no damage from falling, no matter what distance you fall.</p>
