--- a/data/feats/ancestry-01-SPyvwsiSghySIEw2.htm
+++ b/data/feats/ancestry-01-SPyvwsiSghySIEw2.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: As a member of dragonkind, you project unflappable confidence
-Avantage: En tant que membre de l'espèce dragon, vous projetez une confiance inébranlable.
+Avantage: Vous faites soit preuve d'une confiance inébranlable soit d'une peur panique.
 
 ------ Description (en) ------
 <p>As a member of dragonkind, you project unflappable confidence (that collapses catastrophically against the deadliest foes).</p>
@@ -15,4 +15,4 @@ Avantage: En tant que membre de l'espèce dragon, vous projetez une confiance in
 ------ Description (fr) ------
 <p>En tant que membre du genre draconique, vous faites montre d'une confiance imperturbable (qui s'effondre de manière catastrophique contre les ennemis les plus mortels).</p>
 <p>Lorsque vous obtenez un succès à un jet de sauvegarde contre un effet de peur, vous obtenez un succès critique à la place. Lorsque vous obtenez un Échec contre un effet de peur, vous obtenez un échec critique à la place.</p>
-<p>De plus, lorsque vous tentez de @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} un ennemi de votre niveau ou inférieur, vous obtenez un bonus de circonstances de +1 au test d'Intimidation check.</p>
+<p>De plus, lorsque vous tentez de @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser} un ennemi de votre niveau ou inférieur, vous obtenez un bonus de circonstances de +1 au test d'Intimidation.</p>
