--- a/data/feats/ancestry-01-rswkPvZvEBXISH96.htm
+++ b/data/feats/ancestry-01-rswkPvZvEBXISH96.htm
@@ -1,14 +1,14 @@
 Name: Rimesoul
-Nom: Âmegelée
+Nom: Âme gelée
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The water inside you is cold and frozen, like sheets of ice and frigid glaciers.
-Avantage: L'eau qui est en vous est froide et gelée, comme des plaques de glace et des glaciers glacés.
+Avantage: Vous obtenez une résistance au froid égale à la moitié de votre niveau et supportez les environnements froids.
 
 ------ Description (en) ------
 <p>The water inside you is cold and frozen, like sheets of ice and frigid glaciers. You gain resistance to cold equal to half your level (minimum 1), and you treat environmental cold effects as if they were one step less severe (incredible cold becomes extreme, extreme cold becomes severe, and so on).</p>
 ------ Description (fr) ------
-<p>L'eau à l'intérieur de vous est froide et glacée, comme des feuilles de glace et des glaciers froids. Vous obtenez la résistance au froid égal à la moitié de votre niveau (minimum 1) et vous considérez les effets d'environnement froid comme s'il était d'un degré de moins sévère (un froid incroyable devient extrême, un froid extrême devient sévère, etc).</p>
+<p>L'eau qui vous constitue est froide et glacée, comme des feuilles de glace et des glaciers gelés. Vous obtenez une résistance au froid égale à la moitié de votre niveau (minimum 1) et vous considérez les effets d'environnement froid comme s'il était d'un degré de moins sévère (un froid incroyable devient extrême, un froid extrême devient sévère, etc).</p>
