--- a/data/feats/ancestry-01-sJ7WTLDwAbIA9Elc.htm
+++ b/data/feats/ancestry-01-sJ7WTLDwAbIA9Elc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Fire fascinates you.
-Avantage: Le feu vous fascine.
+Avantage: Vous infligez plus de dégâts de feu avec vos sorts et vos objets alchimiques.
 
 ------ Description (en) ------
 <p>Fire fascinates you. Your spells and alchemical items that deal fire damage gain a status bonus to damage equal to half the spell's level or one-quarter the item's level (minimum 1). You also gain a +1 status bonus to any persistent fire damage you deal.</p>
