--- a/data/feats/ancestry-01-sKDCoxMz2yKWLGRJ.htm
+++ b/data/feats/ancestry-01-sKDCoxMz2yKWLGRJ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You were raised with an aasimar or celestial relative, or you've devoted yourself to researching the secrets of the celestial realms.
-Avantage: Vous avez été élevé avec un aasimar ou un parent céleste, ou vous vous êtes consacré à la recherche des secrets des royaumes célestes.
+Avantage: Vous êtes qualifié en Diplomatie et Religion et en Connaissance d'un royaume céleste.
 
 ------ Description (en) ------
 <p>You were raised with an aasimar or celestial relative, or you've devoted yourself to researching the secrets of the celestial realms.</p>
