--- a/data/feats/ancestry-01-shp63QZvw9xvkVvC.htm
+++ b/data/feats/ancestry-01-shp63QZvw9xvkVvC.htm
@@ -2,12 +2,11 @@ Name: Know Oneself
 Nom: Connais toi toi-même
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You center yourself and call to mind the Vudrani monastic ideals of mindfulness and self-knowledge.
-Avantage: Vous vous recentrez et rappelez les idéaux monastiques Vudrani de la pleine conscience et de la connaissance de soi.
+Avantage: Vous transformez un échec critique contre un effet d'émotion en simple échec.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Access</strong> Vudrani ethnicity<br /><strong>Trigger</strong> You roll a critical failure on a saving throw against an emotion effect.<br /></p>
@@ -18,4 +17,4 @@ Avantage: Vous vous recentrez et rappelez les idéaux monastiques Vudrani de la 
 <p><strong>Accès</strong> ethnie vudraine</p>
 <p><strong>Déclencheur</strong> Vous obtenez un échec critique sur un jet de sauvegarde contre un effet d'émotion.</p>
 <hr />
-<p>Vous vous recentrez sur vous-même et faites appel à l'esprit de l'idéal monastique Vudrain du vide de l'esprit et de la connaissance intérieure. Vous obtenez un échec au jet de sauvegarder contre l'effet d'émotion au lieu de l'échec critique.</p>
+<p>Vous vous recentrez sur vous-même et faites appel à l'esprit de l'idéal monastique Vudrain du vide de l'esprit et de la connaissance intérieure. Vous obtenez un échec au jet de sauvegarde contre l'effet d'émotion déclencheur au lieu de l'échec critique.</p>
