--- a/data/feats/ancestry-01-RRGWLuxi1gq3dU2s.htm
+++ b/data/feats/ancestry-01-RRGWLuxi1gq3dU2s.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to use part of your form as a weapon.
-Avantage: Tu as appris à utiliser une partie de ta forme comme une arme.
+Avantage: Vous avez appris à utiliser une partie de votre forme comme une arme.
 
 ------ Description (en) ------
 <p>You’ve learned to use part of your form as a weapon. When you select this feat, you gain a claws unarmed attack that deals [[/r 1d4 #slashing]] slashing damage and has the agile and finesse traits; a horn, jaws, or tusk unarmed attack that deals [[/r 1d6 #piercing]] piercing damage and has the versatile S trait; or a tail unarmed attack that deals [[/r 1d6 #bludgeoning]] bludgeoning damage and has the backswing trait. Each of these unarmed attacks is in the brawling weapon group.</p>
@@ -14,7 +14,12 @@ Avantage: Tu as appris à utiliser une partie de ta forme comme une arme.
 <hr />
 <p><strong>Special</strong> You can take this feat multiple times. Each time you do, select a new attack from the options above.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à utiliser une partie de votre forme comme d'une arme. Lorsque vous choisissez ce don, vous obtenez une attaque à mains nues de griffes qui inflige deals [[/r 1d4 #tranchants]] dégâts tranchants et possèdent les traits agile et finesse ; une attaque à mains nues de corne, de mâchoires ou de défenses qui inflige [[/r 1d6 #perforants]] dégâts perforants et possède le trait Polyvalent T ; ou une attaque à mains nues de queue qui inflige [[/r 1d6 #contondants]] dégâts contondants et possèdent le trait Prise d'élan. Chacune de ces attaques à mains nues est dans le groupe pugilat.</p>
-<p>Vos particularités sont changeantes ; vous pouvez choisir ce don à chaque niveau et vous pouvez le réapprendre ou changer le type d'attaque que vous obtenez.</p>
+<p>Vous avez appris à utiliser une partie de votre forme comme d'une arme. Lorsque vous choisissez ce don, vous obtenez une attaque à mains nues de votre choix entre :</p>
+<ul>
+<li><strong>Griffes</strong> [[/r 1d4 #tranchants]] dégâts tranchants (agile et finesse),</li>
+<li><strong>Corne, Mâchoires ou Défenses</strong> [[/r 1d6 #perforants]] dégâts perforants (Polyvalent T),</li>
+<li><strong>Queue</strong> [[/r 1d6 #contondants]] dégâts contondants (Prise d'élan).</li>
+</ul>
+<p>Toutes ces attaques à mains nues est dans le groupe pugilat. Ces particularités sont modifiables ; vous pouvez choisir ce don à chaque niveau et vous pouvez le réapprendre ou changer le type d'attaque que vous obtenez.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez prendre ce don plusieurs fois. Chaque fois que vous le faites, choisissez une nouvelle attaque parmi les options ci-dessus.</p>
