--- a/data/feats/ancestry-01-Rfyhlyql1GSoDkI2.htm
+++ b/data/feats/ancestry-01-Rfyhlyql1GSoDkI2.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your ingenuity allows you to learn a wide variety of skills.
-Avantage: Votre ingéniosité vous permet d'acquérir une grande variété de compétences.
+Avantage: Vous gagnez le rang de maîtrise qualifié dans deux compétences de votre choix.
 
 ------ Description (en) ------
 <p>Your ingenuity allows you to learn a wide variety of skills. You gain the trained proficiency rank in two skills of your choice.</p>
 ------ Description (fr) ------
-<p>Votre sagacité vous permet d’apprendre de nombreuses compétences. Vous gagnez le rang de maîtrise qualifié dans deux compétences de votre choix</p>
+<p>Votre sagacité vous permet d’apprendre de nombreuses compétences. Vous gagnez le rang de maîtrise qualifié dans deux compétences de votre choix.</p>
