--- a/data/feats/ancestry-01-SCgqIo8VQZZKZ1Ws.htm
+++ b/data/feats/ancestry-01-SCgqIo8VQZZKZ1Ws.htm
@@ -6,7 +6,7 @@ PrereqFR: vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: Your orc blood is strong enough to grant you the keen vision of your orc forebears.
-Avantage: Ton sang orc est assez fort pour te donner la vision perçante de tes ancêtres orcs.
+Avantage: Vous obtenez Vision dans le noir.
 
 ------ Description (en) ------
 <p>Your orc blood is strong enough to grant you the keen vision of your orc forebears. You gain darkvision, allowing you to see in darkness and dim light just as well as you can in bright light. However, in darkness, you see in black and white only.</p>
