--- a/data/feats/ancestry-01-qzalwa2Ze3dIqIrA.htm
+++ b/data/feats/ancestry-01-qzalwa2Ze3dIqIrA.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your tongue darts out faster than the eye can see to retrieve loose objects.
-Avantage: Votre langue s'élance plus vite que l'œil ne peut voir pour récupérer des objets perdus.
+Avantage: Votre langue peut attraper les petits objets non tenus à courte distance.
 
 ------ Description (en) ------
 <p>Your tongue darts out faster than the eye can see to retrieve loose objects. You Interact to pick up a single unattended object of light Bulk or less within 10 feet of you. If you don’t have enough hands free to hold the object, it falls to the ground in your space.</p>
 ------ Description (fr) ------
-<p>Votre langue pointe plus rapidement que l'œil peut le percevoir pourrécupérer les objets abandonnés. Vous Interagissez pour récupérer un objet unique non porté d'Encombrement léger à moins de 3 m de vous. Si vous n'avez pas les mains libres pour tenir l'objet, il chute au sole dans votre case.</p>
+<p>Votre langue pointe plus rapidement que l'œil peut le percevoir pour récupérer les objets abandonnés. Vous Interagissez pour récupérer un objet unique non tenu d'Encombrement léger situé à moins de 3 m de vous. Si vous n'avez pas les mains libres pour attraper l'objet, il chute au sol dans votre case.</p>
