--- a/data/feats/ancestry-01-sL2GmYve5NXJ0wc1.htm
+++ b/data/feats/ancestry-01-sL2GmYve5NXJ0wc1.htm
@@ -7,11 +7,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Gloom holds few terrors for you, and the pall of darkness over Nidal has made you comfortable in dim light.
-Avantage: Les ténèbres ne vous effraient guère, et la pénombre qui règne sur Nidal vous a rendu à l'aise dans la pénombre.
+Avantage: Vous obtenez Vision nocturne.
 
 ------ Description (en) ------
 <p>Gloom holds few terrors for you, and the pall of darkness over Nidal has made you comfortable in dim light. You gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}.</p>
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie nidalaise</p>
 <hr />
-<p>La pénombre recèle peu de terreurs en ce qui vous concerne et la chappe de noirceur sur le Nidal vous a habitué à une lumière atténuée. Vous obtenez  @Compendium[pf2e.bestiary-ability-glossary-srd.fFu2sZz4KB01fVRc]{vision nocturne}.</p>
+<p>La pénombre recèle peu de terreurs en ce qui vous concerne et la chappe de noirceur sur le Nidal vous a habitué à une lumière atténuée. Vous obtenez @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Vision nocturne}.</p>
