--- a/data/feats/ancestry-01-sm6Y3fTcltxE8N0p.htm
+++ b/data/feats/ancestry-01-sm6Y3fTcltxE8N0p.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve picked up skills and tales from your goblin community.
-Avantage: Vous avez appris des compétences et des contes de votre communauté gobeline.
+Avantage: Vous êtes qualifié en Nature et en Discrétion et en Connaissance des gobelins.
 
 ------ Description (en) ------
 <p>You've picked up skills and tales from your goblin community. You gain the trained proficiency rank in Nature and Stealth. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Goblin Lore.</p>
