--- a/data/feats/ancestry-01-TYoE0GDF0URwQqZI.htm
+++ b/data/feats/ancestry-01-TYoE0GDF0URwQqZI.htm
@@ -1,12 +1,12 @@
 Name: Mistsoul
-Nom: Âmebrume
+Nom: Âme brumeuse
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to vaporous forms of water, such as fog and mist.
-Avantage: Vous avez un lien avec les formes vaporeuses de l'eau, comme le brouillard et la brume.
+Avantage: Vous obtenez la réaction Se fondre de la brume
 
 ------ Description (en) ------
 <p>You have a connection to vaporous forms of water, such as fog and mist. You gain the @Compendium[pf2e.actionspf2e.I9k9qe4gOT8UVK4e]{Mist Blending} reaction.</p>
