--- a/data/feats/ancestry-01-TmaxLWraJrvSQOkY.htm
+++ b/data/feats/ancestry-01-TmaxLWraJrvSQOkY.htm
@@ -2,12 +2,11 @@ Name: Mariner’s Fire
 Nom: Feu du marin
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You conjure uncanny orbs of spiritual flame that float above or below the water's surface.
-Avantage: Vous conjurez d'étranges orbes de flammes spirituelles qui flottent au-dessus ou au-dessous de la surface de l'eau.
+Avantage: Vous pouvez lancer le tour de magie @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Flammes} comme un sort inné primordial à volonté y compris sous l'eau.
 
 ------ Description (en) ------
 <p>You conjure uncanny orbs of spiritual flame that float above or below the water’s surface. You can cast the @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Produce Flame} cantrip as a primal innate spell at will, heightened to a spell level equal to half your level rounded up. You can cast this cantrip underwater.</p>
