--- a/data/feats/ancestry-01-tn7K5lbnF87rZ659.htm
+++ b/data/feats/ancestry-01-tn7K5lbnF87rZ659.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’re extremely extroverted, and you often spend your time carousing or otherwise socializing.
-Avantage: Vous êtes extrêmement extraverti, et vous passez souvent votre temps à faire la fête ou à socialiser.
+Avantage: Vous êtes qualifié en Diplomatie et obtenez le don Animal social.
 
 ------ Description (en) ------
 <p>You're extremely extroverted, and you often spend your time carousing or otherwise socializing. You are trained in Diplomacy (or another skill of your choice if you were already trained in Diplomacy), and you gain the @Compendium[pf2e.feats-srd.4RjDxgvNXNl5GG9d]{Hobnobber}skill feat.</p>
 ------ Description (fr) ------
-<p>Vous êtes extrêmement extraverti et vous passez souvent votre temps à faire la fête ou dans des activités sociales. Vous êtes qualifié en Diplomatie (ou en une autre compétence de votre choix si vous étiez déjà qualifié en Diplomatie) et vous obtenez le don de compétence @Compendium[pf2e.feats-srd.4RjDxgvNXNl5GG9d]{Animal social}.</p>
+<p>Vous êtes extrêmement extraverti et vous passez souvent votre temps à faire la fête ou dans des activités sociales. Vous êtes qualifié en Diplomatie (ou en une autre compétence de votre choix si vous étiez déjà qualifié en Diplomatie) et obtenez le don de compétence @Compendium[pf2e.feats-srd.4RjDxgvNXNl5GG9d]{Animal social}.</p>
