--- a/data/feats/ancestry-01-u8gmBNHgb880vN3S.htm
+++ b/data/feats/ancestry-01-u8gmBNHgb880vN3S.htm
@@ -2,12 +2,11 @@ Name: Witch Warden
 Nom: Garde-sorcière
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You and your family have fought long and hard against witches, particularly the winter witches of Irrisen, and you’ve learned to be wary of their curses and the otherworldly powers their patrons grant.
-Avantage: Vous et votre famille avez longtemps et durement combattu les sorcières, en particulier les sorcières d'hiver d'Irrisen, et vous avez appris à vous méfier de leurs malédictions et des pouvoirs d'un autre monde qu'accordent leurs mécènes.
+Avantage: Vous résistez plus facilement aux malédictions et aux sorts lancés par les sorcières ou les guenaudes.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Kellid ethnicity<br /></p>
@@ -16,5 +15,5 @@ Avantage: Vous et votre famille avez longtemps et durement combattu les sorcièr
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Kellide</p>
 <hr />
-<p>Vous et votre famille avez combattu longuement et durement contre les sorcières et plus particulièrement contre les sorcières de l'hiver d'Irrisen et vous êtes conscient des malédictions et des pouvoirs d'Outre-monde accordés par leurs patrons.</p>
-<p>Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les malédictions et aux jets de sauvegarde contre les sorts lancés par les sorcières ou les guenaudes. Si vous obtenez une réussite contre une malédiction ou un sort lancé par une sorcière ou une guenaude, vous obtenez à la place une réussite critique.</p>
+<p>Vous et votre famille avez combattu longuement et durement contre les sorcières et plus particulièrement contre les sorcières de l'hiver d'Irrisen et vous êtes conscient des malédictions et des pouvoirs d'Outre-monde que leur accordent leurs patrons.</p>
+<p>Vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les malédictions et aux jets de sauvegarde contre les sorts lancés par les sorcières ou les guenaudes. Si vous obtenez un succès contre une malédiction ou un sort lancé par une sorcière ou une guenaude, vous obtenez à la place un succès critique.</p>
