--- a/data/feats/ancestry-01-tP8pws78OOmobWjB.htm
+++ b/data/feats/ancestry-01-tP8pws78OOmobWjB.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Once, you died because you valued someone else's life above your own; just as then, you protect an ally by suffering in their stead.
-Avantage: Autrefois, vous êtes mort parce que vous accordiez plus d’importance à la vie d’un autre qu’à la vôtre ; tout comme aujourd’hui, vous protégez un allié en souffrant à sa place.
+Avantage: Vous redirigez les dégâts infligés sur un allié sur vous-même.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> An ally within 30 feet takes damage that would otherwise reduce them to 0 Hit Points and give them the @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Dying} condition.</p>
@@ -16,8 +16,8 @@ Avantage: Autrefois, vous êtes mort parce que vous accordiez plus d’importanc
 <p><strong>Special</strong> You can select this feat only at 1st level, and you can’t retrain into or out of this feat.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Déclencheur</strong> Un allié dans les 9 m subit des dégâts qui devraient autrement le réduire à 0 Point de vie et leur donne la condition @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourant}.</p>
+<p><strong>Déclencheur</strong> Un allié dans les 9 m subit des dégâts qui devraient le réduire à 0 Point de vie et lui donne la condition @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourant}.</p>
 <hr />
-<p>Une fois, vous êtes mort car vous avez donné plus de valeur à la vie de quelqu'un qu'à la vôtre ; Depuis lors, vous protégez un allié en souffrant à sa place. Réduisez les dégâts que l'allié déclencheur devrait subi par 1 + votre niveau. Vous redirigez ces dégâts sur vous-même, mais vos immunités, faiblesses, résistances etc ne s'appliquent pas. Vous n'êtes pas sujet à toute condition ou aux autres effets que votre allié a subis (tels que le poison d'une morsure venimeuse) — votre allié est toujours sujet à ces effets même si vous redirigez tout les dégâts déclenchez à vous-même. Si les dégâts redirigés empêchent votre allié d'être réduit à 0 Points de vie, il reste conscient et n'obtenez pas la condition Mourant.</p>
+<p>Une fois, vous êtes mort car vous avez accordé davantage de valeur à la vie de quelqu'un qu'à la vôtre ; Depuis lors, vous protégez un allié en souffrant à sa place. Réduisez les dégâts que l'allié déclencheur devrait subi par 1 + votre niveau. Vous redirigez ces dégâts sur vous-même, mais vos immunités, faiblesses, résistances etc ne s'appliquent pas. Vous n'êtes pas sujet à toute condition ou aux autres effets que votre allié a subis (tels que le poison d'une morsure venimeuse) — votre allié est toujours sujet à ces effets même si vous redirigez tout les dégâts déclencheurs sur vous-même. Si les dégâts redirigés empêchent votre allié d'être réduit à 0 Points de vie, il reste conscient et n'obtient pas la condition Mourant.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez choisir ce don seulement au niveau 1 et vous ne pouvez pas pas réapprendre ce don pour l'obtenir ou le perdre.</p>
