--- a/data/feats/ancestry-01-UJ8AqzkkDqRCMNFW.htm
+++ b/data/feats/ancestry-01-UJ8AqzkkDqRCMNFW.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are either naturally calm and collected in the face of imminent danger, or you are very good at faking it.
-Avantage: Soit vous êtes naturellement calme et posé face à un danger imminent, soit vous êtes très doué pour faire semblant.
+Avantage: Vous vous remettez plus rapidement de vos peurs.
 
 ------ Description (en) ------
 <p>You are either naturally calm and collected in the face of imminent danger, or you are very good at faking it. At the end of your turn, reduce your @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} condition by 2 instead of 1.</p>
