--- a/data/feats/ancestry-01-UwH0sGIthv8kiPUt.htm
+++ b/data/feats/ancestry-01-UwH0sGIthv8kiPUt.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You take advantage of your ally’s movement to adjust your position.
-Avantage: Vous profitez du mouvement de votre allié pour ajuster votre position.
+Avantage: Vous faites un pas quand un allié vient à vos côtés.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally ends a move action adjacent to you.</p>
