--- a/data/feats/ancestry-01-Ugw1zZStQhg6iz8h.htm
+++ b/data/feats/ancestry-01-Ugw1zZStQhg6iz8h.htm
@@ -2,12 +2,11 @@ Name: Adroit Manipulation
 Nom: Manipulation adroite
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You’ve fiddled with knots, locks, and blacksmith’s puzzles since you were a child to give your hands something to do.
-Avantage: Vous avez bricolé des nœuds, des serrures et des casse-tête de forgeron depuis que vous êtes enfant pour donner à vos mains quelque chose à faire.
+Avantage: Vous êtes qualifié en Vol et êtes doué pour crocheter les serrures.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Mihrini ethnicity</p>
