--- a/data/feats/ancestry-01-VDiMapgJoFI3CCol.htm
+++ b/data/feats/ancestry-01-VDiMapgJoFI3CCol.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: To you, the squeaking of rats and other rodents makes a strange kind of sense.
-Avantage: Pour vous, le couinement des rats et autres rongeurs a un sens étrange.
+Avantage: Vous savez parler aux rongeurs et pouvez utiliser la Diplomatie avec eux.
 
 ------ Description (en) ------
 <p>To you, the squeaking of rats and other rodents makes a strange kind of sense.</p>
