--- a/data/feats/ancestry-01-VatkAzfBYjA6z6OP.htm
+++ b/data/feats/ancestry-01-VatkAzfBYjA6z6OP.htm
@@ -7,9 +7,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your have honed your claws to be deadly.
-Avantage: Tu as aiguisé tes griffes pour être mortel.
+Avantage: Vos griffes infligent 1d6 dégâts tranchants ou perforants.
 
 ------ Description (en) ------
 <p>Your have honed your claws to be deadly. Your claw attack deals [[/r 1d6 #slashing]] slashing damage instead of 1d4 and gains the versatile (piercing) trait.</p>
 ------ Description (fr) ------
-<p>Vous avez aiguisé vos griffes pour qu'elles soient mortelles. Votre attaque de griffe inflige [[/r 1d6 #slashing]] dégâts tranchants au lieu de 1d4 et possèdent le trait polyvalent (Perforant).</p>
+<p>Vous avez aiguisé vos griffes pour qu'elles soient mortelles. Votre attaque de griffe inflige [[/r 1d6 #slashing]] dégâts tranchants au lieu de 1d4 et possède le trait polyvalent P.</p>
