--- a/data/feats/ancestry-01-uiNRrdnJe0GOzy6Q.htm
+++ b/data/feats/ancestry-01-uiNRrdnJe0GOzy6Q.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your previous life ended due to sheer poor luck, struck by lightning or choking on a fish bone.
-Avantage: Votre vie précédente s'est terminée par manque de chance, par un coup de foudre ou par une arête de poisson.
+Avantage: Vous pouvez relancer un jet de sauvegarde ou de récupération pour ne pas mourir.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> You would die as a result of a failed saving throw or recovery check.</p>
