--- a/data/feats/ancestry-01-VV7vbDzcO8vdD3OO.htm
+++ b/data/feats/ancestry-01-VV7vbDzcO8vdD3OO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You wear skulls to demoralize foes.
-Avantage: Tu portes des crânes pour démoraliser tes ennemis.
+Avantage: Vous êtes qualifié en Intimidation et obtenez le don Regard intimidant et augmentez l'effet si vous portez un masque crâne.
 
 ------ Description (en) ------
 <p>You wear skulls to demoralize foes. You become trained in Intimidation and gain the @Compendium[pf2e.feats-srd.xQMz6eDgX75WX2ce]{Intimidating Glare} skill feat. If you’re already trained in Intimidation, you instead become trained in a skill of your choice. If you pay 50 gp for a splendid skull mask, the mask grants you a +1 item bonus to Intimidation; its usage is worn (mask).</p>
