--- a/data/feats/ancestry-01-VU07hybqzUXIJ6l2.htm
+++ b/data/feats/ancestry-01-VU07hybqzUXIJ6l2.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve dutifully learned important skills passed down through generations of halfling tradition.
-Avantage: Tu as appris consciencieusement des compétences importantes transmises par des générations de tradition halfling.
+Avantage: Vous êtes qualifié en Acrobaties et en Discrétion et en Connaissance des halfelins.
 
 ------ Description (en) ------
 <p>You've dutifully learned how to keep your balance and how to stick to the shadows where it's safe, important skills passed down through generations of halfling tradition. You gain the trained proficiency rank in Acrobatics and Stealth. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Halfling Lore.</p>
