--- a/data/feats/ancestry-01-WoKiYMCXV27szBdy.htm
+++ b/data/feats/ancestry-01-WoKiYMCXV27szBdy.htm
@@ -6,13 +6,13 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With pitiful posturing, you cause your foe to pull back a deadly attack.
-Avantage: Avec une posture pitoyable, vous faites en sorte que votre ennemi retire une attaque mortelle.
+Avantage: La créature qui obtient un coup critique sur son attaque subit une pénalité de circonstance aux dégâts égale à votre niveau + 2.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature you are aware of critically succeeds on a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} against you and would deal damage to you.</p>
 <hr />
 <p>With pitiful posturing, you cause your foe to pull back a deadly attack. The attacking creature takes a circumstance penalty to the damage of the triggering Strike equal to your level + 2. This penalty applies after doubling the damage for a critical hit. The attacker is then immune to your Cringe for 24 hours.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Une créature dont vous êtes conscient obtient une réussite critique sur une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} contre vous et devrait vous faire subir des dégâts.</p>
+<p><strong>Déclencheur</strong> Une créature dont vous êtes conscient obtient un coup critique sur une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} contre vous et devrait vous faire subir des dégâts.</p>
 <hr />
 <p>En prenant une posture qui fait pitié, vous obligez votre ennemi à retenir une attaque mortelle. La créature attaquante subit une pénalité de circonstance aux dégâts de la Frappe déclencheuse égale à votre niveau + 2. Cette pénalité s'applique après avoir doublé les dégâts du coup critique. L'attaquant est alors immunisé à votre Recroquevillé pendant 24 heures.</p>
