--- a/data/feats/ancestry-01-vWf6uykXkQp1Li0r.htm
+++ b/data/feats/ancestry-01-vWf6uykXkQp1Li0r.htm
@@ -1,14 +1,14 @@
 Name: Fumesoul
-Nom: Âmevaporeuse
+Nom: Âme vaporeuse
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The air inside you asserts itself as a toxic miasma, inuring you to most poisons .
-Avantage: L'air à l'intérieur de vous s'affirme comme un miasme toxique, vous rendant inerte à la plupart des poisons .
+Avantage: Vous obtenez une résistance aux poisons égale à la moitié de votre niveau (minimum 1).
 
 ------ Description (en) ------
 <p>The air inside you asserts itself as a toxic miasma, inuring you to most poisons. You gain resistance to poison equal to half your level (minimum 1).</p>
 ------ Description (fr) ------
-<p>L'air à l'intérieur de vous s'affirme lui-même comme un miasme toxique, vous rendant endurant à la plupart des poisons. Vous obtenez une résistance aux poisons égal à la moitié de votre niveau (minimum 1).</p>
+<p>L'air qui vous compose s'affirme lui-même comme un miasme toxique, vous rendant endurant à la plupart des poisons. Vous obtenez une résistance aux poisons égale à la moitié de votre niveau (minimum 1).</p>
