--- a/data/pathfinder-bestiary/hiGwRWdxAsoCII4f.htm
+++ b/data/pathfinder-bestiary/hiGwRWdxAsoCII4f.htm
@@ -1,7 +1,6 @@
 Name: Cinder Rat
 Nom: Rat des braises
-État: changé
-État d'origine: officielle
+État:  officielle
 
 ------ Description (en) ------
 These oversized rodents are made of smoldering charcoal and elemental fire, and noxious fumes continually bellow from their flaming flesh.<br /><br />
