--- a/data/pathfinder-bestiary/Ey19J4nTn1dQvLtE.htm
+++ b/data/pathfinder-bestiary/Ey19J4nTn1dQvLtE.htm
@@ -1,5 +1,5 @@
 Name: Snapping Flytrap
-Nom: Attrape Mouches vorace
+Nom: Attrape-Mouches vorace
 État: officielle
 
 ------ Description (en) ------
