--- a/data/pathfinder-bestiary/FPKoiMXENk5FouXp.htm
+++ b/data/pathfinder-bestiary/FPKoiMXENk5FouXp.htm
@@ -1,9 +1,8 @@
 Name: Elemental Hurricane
-Nom: Ouragan élémenataire
-État: changé
-État d'origine: officielle
+Nom: Ouragan élémentaire
+État: officielle
 
 ------ Description (en) ------
 Elemental hurricanes embody the ferocity of violent windstorms.<br /><br />
 ------ Description (fr) ------
-Les ouragans élémentaires personnifient la violence des tempêtes déchaînées.
+Les Ouragans élémentaires personnifient la violence des tempêtes déchaînées.
